Fix bug in trim dialog where sometimes screen will flash with scrollbars.
This was occurring only on PC versions when scrubbing the video. Sometimes scrollbars would appear. This was fixed by hiding overflow for the trim dialog.

--- a/views/index.css
+++ b/views/index.css
@@ -273,6 +273,9 @@ body.playlistMode #videoControls {
     margin-top: -0.1vh;
     width: 0.7em;
 }
+#trimDialog {
+    overflow: hidden;
+}
 #trimDialog label {
     width: 26%;
     display: inline-block;
